--- a/src/Presentation/Web/Views/Category/CategoryTickets.cshtml
+++ b/src/Presentation/Web/Views/Category/CategoryTickets.cshtml
@@ -1,20 +1,26 @@
 ﻿@model Common.ViewModels.CategoryTickets.CategoryTickets
+<html>
+<head>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="~/css/accordion.css" />
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> 
-        <div class="container">
-            <div id="accordion" class="panel-group">
-                <div class="panel">
-       @foreach(var cate in Model.category)
+</head>
+<div class ="card">
+<div class="card-header"> 
+<div class="row">
+            @{
+                int i = 1;
+            }
+            @foreach(var cate in Model.category)
           {
-              <div class="panel-heading">
-              <h4 class="panel-title">
-            <a href="#panelBodyOne" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">@cate.CategoryName</a>
-            </h4>
-             </div>
-                <div id="panelBodyOne" class="panel-collapse collapse in">
-            
-            <div class="panel-body">
-            <table class="table table-striped table-responsive">
+              <span>@i</span> i++;
+            <div class="faq-drawer ">
+                <input class="faq-drawer__trigger" id="faq-drawer""+"" @i " type="checkbox" />
+                <label class="faq-drawer__title" for="faq-drawer">@cate.CategoryName</label>
+            <div class="faq-drawer__content-wrapper">
+        <div class="faq-drawer__content">
+          <p>
+           <table class="table table-striped table-responsive">
          <thead>
         <tr>
             <th>
@@ -34,9 +40,6 @@
             </th>
             <th>
                AssignedTo
-            </th>
-            <th>
-               CategoryName
             </th>
             <th>
                 Status
@@ -96,7 +99,8 @@
                 <h5 class="card-title">None at the moment</h5>
             }
             </tbody>
-            </table>
+            </table></p>
+            </div>
             </div>
             </div>
         }
@@ -104,4 +108,6 @@
     </div>
     </div>
     </div>
+    </html>
+
     
