--- a/src/Presentation/Web/wwwroot/css/accordion.css
+++ b/src/Presentation/Web/wwwroot/css/accordion.css
@@ -1,58 +1,74 @@
-﻿.container {
-    width: 1180px;
-    margin-top: 3em;
+﻿body {
+    background-color: #FFF8F2;
+    color: #373539;
+    font-family: 'Montserrat', sans-serif;
 }
 
-#accordion .panel {
-    border-radius: 0;
-    border: 0;
-    margin-top: 0px;
+.container {
+    padding: 10px;
 }
 
-#accordion a {
+.faq-drawer {
+    margin-bottom: 30px;
+}
+
+.faq-drawer__content-wrapper {
+    font-size: 1.25em;
+    line-height: 1.4em;
+    max-height: 0px;
+    overflow: hidden;
+    transition: 0.25s ease-in-out;
+}
+
+.faq-drawer__title {
+    border-top: #000 1px solid;
+    cursor: pointer;
     display: block;
-    padding: 10px 15px;
-    border-bottom: 1px solid #b42b2b;
-    text-decoration: none;
+    font-size: 1.25em;
+    font-weight: 700;
+    padding: 30px 0 0 0;
+    position: relative;
+    margin-bottom: 0;
+    transition: all 0.25s ease-out;
 }
 
-#accordion .panel-heading a.collapsed:hover,
-#accordion .panel-heading a.collapsed:focus {
-    background-color: #b42b2b;
-    color: white;
-    transition: all 0.2s ease-in;
+    .faq-drawer__title::after {
+        border-style: solid;
+        border-width: 1px 1px 0 0;
+        content: " ";
+        display: inline-block;
+        float: right;
+        height: 10px;
+        left: 2px;
+        position: relative;
+        right: 20px;
+        top: 2px;
+        transform: rotate(135deg);
+        transition: 0.35s ease-in-out;
+        vertical-align: top;
+        width: 10px;
+    }
+
+    /* OPTIONAL HOVER STATE */
+    .faq-drawer__title:hover {
+        color: #4E4B52;
+    }
+
+.faq-drawer__trigger:checked + .faq-drawer__title + .faq-drawer__content-wrapper {
+    max-height: 350px;
 }
 
-    #accordion .panel-heading a.collapsed:hover::before,
-    #accordion .panel-heading a.collapsed:focus::before {
-        color: white;
-    }
-
-#accordion .panel-heading {
-    padding: 0;
-    border-radius: 0px;
-    text-align: center;
+.faq-drawer__trigger:checked + .faq-drawer__title::after {
+    transform: rotate(-45deg);
+    transition: 0.25s ease-in-out;
 }
 
-    #accordion .panel-heading a:not(.collapsed) {
-        color: white;
-        background-color: #b42b2b;
-        transition: all 0.2s ease-in;
-    }
+input[type="checkbox"] {
+    display: none;
+}
 
-    /* Add Indicator fontawesome icon to the left */
-    #accordion .panel-heading .accordion-toggle::before {
-        font-family: 'FontAwesome';
-        content: '\f00d';
-        float: left;
-        color: white;
-        font-weight: lighter;
-        transform: rotate(0deg);
-        transition: all 0.2s ease-in;
+@media only screen and (max-width: 600px) {
+    .container {
+        padding: 80px;
     }
-
-    #accordion .panel-heading .accordion-toggle.collapsed::before {
-        color: #444;
-        transform: rotate(-135deg);
-        transition: all 0.2s ease-in;
-    }
+}
