--- a/src/Presentation/Web/Views/User/EditUser.cshtml
+++ b/src/Presentation/Web/Views/User/EditUser.cshtml
@@ -1,5 +1,4 @@
-﻿@*@using Syncfusion.EJ2*@
-@model Common.ViewModels.Users.EditUserViewModel
+﻿@model Common.ViewModels.Users.EditUserViewModel
 
 @{
     ViewData["Title"] = "EditUser";
