--- a/src/Presentation/Web/wwwroot/css/accordion.css
+++ b/src/Presentation/Web/wwwroot/css/accordion.css
@@ -1,74 +1,121 @@
-﻿body {
-    background-color: #FFF8F2;
-    color: #373539;
-    font-family: 'Montserrat', sans-serif;
+﻿$midnight: #2c3e50;
+$clouds: #ecf0f1;
+// General
+body {
+    color: $midnight;
+    background: $clouds;
+    padding: 0 1em 1em;
 }
 
-.container {
-    padding: 10px;
+h1 {
+    margin: 0;
+    line-height: 2;
+    text-align: center;
 }
 
-.faq-drawer {
-    margin-bottom: 30px;
+h2 {
+    margin: 0 0 .5em;
+    font-weight: normal;
 }
 
-.faq-drawer__content-wrapper {
-    font-size: 1.25em;
-    line-height: 1.4em;
-    max-height: 0px;
+input {
+    position: absolute;
+    opacity: 0;
+    z-index: -1;
+}
+
+// Layout
+.row {
+    display: flex;
+    .col
+
+{
+    flex: 1;
+    &:last-child
+
+{
+    margin-left: 1em;
+}
+
+}
+}
+/* Accordion styles */
+.tabs {
+    border-radius: 8px;
     overflow: hidden;
-    transition: 0.25s ease-in-out;
+    box-shadow: 0 4px 4px -2px rgba(0,0,0,0.5);
 }
 
-.faq-drawer__title {
-    border-top: #000 1px solid;
+.tab {
+    width: 100%;
+    color: white;
+    overflow: hidden;
+    &-label
+
+{
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+    background: $midnight;
+    font-weight: bold;
     cursor: pointer;
-    display: block;
-    font-size: 1.25em;
-    font-weight: 700;
-    padding: 30px 0 0 0;
-    position: relative;
-    margin-bottom: 0;
-    transition: all 0.25s ease-out;
+    /* Icon */
+    &:hover
+
+{
+    background: darken($midnight, 10%);
 }
 
-    .faq-drawer__title::after {
-        border-style: solid;
-        border-width: 1px 1px 0 0;
-        content: " ";
-        display: inline-block;
-        float: right;
-        height: 10px;
-        left: 2px;
-        position: relative;
-        right: 20px;
-        top: 2px;
-        transform: rotate(135deg);
-        transition: 0.35s ease-in-out;
-        vertical-align: top;
-        width: 10px;
-    }
-
-    /* OPTIONAL HOVER STATE */
-    .faq-drawer__title:hover {
-        color: #4E4B52;
-    }
-
-.faq-drawer__trigger:checked + .faq-drawer__title + .faq-drawer__content-wrapper {
-    max-height: 350px;
+&::after {
+    content: "\276F";
+    width: 1em;
+    height: 1em;
+    text-align: center;
+    transition: all .35s;
 }
 
-.faq-drawer__trigger:checked + .faq-drawer__title::after {
-    transform: rotate(-45deg);
-    transition: 0.25s ease-in-out;
 }
 
-input[type="checkbox"] {
-    display: none;
+&-content {
+    max-height: 0;
+    padding: 0 1em;
+    color: $midnight;
+    background: white;
+    transition: all .35s;
 }
 
-@media only screen and (max-width: 600px) {
-    .container {
-        padding: 80px;
-    }
+&-close {
+    display: flex;
+    justify-content: flex-end;
+    padding: 1em;
+    font-size: 0.75em;
+    background: $midnight;
+    cursor: pointer;
+    &:hover
+
+{
+    background: darken($midnight, 10%);
+}
+
+}
+}
+
+// :checked
+input:checked {
+    + .tab-label
+
+{
+    background: darken($midnight, 10%);
+    &::after
+
+{
+    transform: rotate(90deg);
+}
+
+}
+
+~ .tab-content {
+    max-height: 100vh;
+    padding: 1em;
+}
 }
