--- a/src/Presentation/Web/Views/Category/CategoryDetails.cshtml
+++ b/src/Presentation/Web/Views/Category/CategoryDetails.cshtml
@@ -43,7 +43,7 @@
         </dd>
     </dl>
     
-    <form asp-action="DeleteCategory">
+    <form >
         <a asp-action="Index" class="btn btn-danger">Back to List</a>
     </form>
 </div>
