--- a/src/Presentation/Web/Views/Category/Index.cshtml
+++ b/src/Presentation/Web/Views/Category/Index.cshtml
@@ -58,7 +58,7 @@
                             <div class="w-75 btn-group" role="group">
                                 <a title ="Edit" asp-controller="Category" asp-action="EditCategory" asp-route-CId="@item.CId" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
                                 <a title="Detail" asp-controller="Category" asp-action="CategoryDetails" asp-route-CId="@item.CId" class="btn btn-sm btn-danger mx-2"><i class="bi bi-eye"></i></a>
-                                <a title="Detail" asp-controller="Category" asp-action="DeleteCategory" asp-route-CId="@item.CId" class="btn btn-sm btn-danger mx-2"><i class="bi bi-trash-fill"></i></a>
+                                <a title="Delete" asp-controller="Category" asp-action="DeleteCategory" asp-route-CId="@item.CId" class="btn btn-sm btn-danger mx-2"><i class="bi bi-trash-fill"></i></a>
 
                             </div>
                         </td>
