--- a/src/Presentation/Web/Views/CategoryTemp/Index.cshtml
+++ b/src/Presentation/Web/Views/CategoryTemp/Index.cshtml
@@ -18,6 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.CategoryName)
             </th>
+            <th>
+                Action
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -33,6 +36,11 @@
                         </td>
                         <td>
                         </td>
+                        <td>
+                        <a title="Detail" asp-controller="CategoryTemp" asp-action="deleteField" asp-route-Id="@item.Id" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
+                        <a title="Detail" asp-controller="CategoryTemp" asp-action="deleteField" asp-route-Id="@item.Id" class="btn btn-sm btn-danger mx-2"><i class="bi bi-trash-fill"></i></a>
+                        </td>
+
                     </tr>
                 }   
             }
