--- a/src/Presentation/Web/Views/FieldValidate/Index.cshtml
+++ b/src/Presentation/Web/Views/FieldValidate/Index.cshtml
@@ -39,7 +39,7 @@
                         </td>
                         <td>
                     <div class="w-75 btn-group" role="group">
-                        <a title="Edit" asp-controller="FieldValidate" asp-action="Edit" asp-route-Id="@item.Id" class="btn btn-sm btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
+                        <a title="Edit" asp-controller="FieldValidate" asp-action="EditTemp" asp-route-Id="@item.Id" class="btn btn-sm btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
                          <a title="Detail" asp-controller="FieldValidate" asp-action="deleteField" asp-route-CId="@item.Id" class="btn btn-sm btn-danger mx-2"><i class="bi bi-trash-fill"></i></a>
                      </div>
                 </td>
