--- a/src/Presentation/Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/Web/Views/Shared/_Layout.cshtml
@@ -128,6 +128,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta2/js/bootstrap-select.min.js"></script>
         @await RenderSectionAsync("Scripts", required: false)
-        @*@await Component.InvokeAsync("NToastNotify")*@
+        @await Component.InvokeAsync("NToastNotify")
 </body>
 </html>
